<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/nav_item_software">
        <menu>
            <item
                android:id="@+id/navigation_item_rate"
                android:icon="@drawable/ic_stars"
                android:title="@string/nav_item_star"/>
            <item
                android:id="@+id/navigation_item_share"
                android:icon="@drawable/ic_shares"
                android:title="@string/nav_item_share"/>
            <item
                android:id="@+id/navigation_item_help"
                android:icon="@drawable/ic_help"
                android:title="@string/nav_sub_menu_help"/>
        </menu>
    </item>

    <item
        android:title="@string/nav_sub_menu_developer">
        <menu>
            <item
                android:id="@+id/navigation_item_about"
                android:icon="@drawable/ic_about"
                android:title="@string/nav_sub_menu_about"/>
            <item
                android:id="@+id/navigation_item_app"
                android:icon="@drawable/ic_app"
                android:title="@string/nav_sub_menu_app"/>
        </menu>
    </item>
</menu>

