<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/item_line_horizontal"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/actionbar_share"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/txt_about_app"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:src="@drawable/item_line_horizontal"/>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/txt_about_author"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/txt_about_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/txt_about_feedback"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/txt_about_email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:src="@drawable/item_line_horizontal"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/str_dialog_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/str_dialog_2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/str_dialog_3"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/str_dialog_4"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="@string/str_dialog_5"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/text_color"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ir.adad.banner.AdadBannerAd
        android:id="@+id/banner_ad_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        app:token="24d98f89-dd92-460b-a280-8739f1a64cf4"/>

</LinearLayout>